--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
     "next": "13.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "postcss": "^8.4.23",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^15.1.0",
+    "postcss-loader": "^7.3.0",
+    "postcss-nesting": "^11.2.2",
+    "postcss-preset-env": "^8.3.2"
   }
 }
